# fractal_phi12

./: .gitignore  Cargo.toml  QSGAL_1.0_PROOF_20260120_054518.manifest  QSGAL_1.0_PROOF_20260120_054518.manifest.asc  QSGAL_PRIORITY_20260120_054613.proof  QSGAL_PRIORITY_20260120_054613.proof.asc  README.md  fractal_phi12_holographic.rs  holo.db  provisional.html  provisional.md  test.qsgal
.github/workflows/: wasm.yml
benches/: phi12.rs
src/: lib.rs  main.rs
